lab1/Test/L1-A-8-30.cmm
int zU2fD ( struct oiy6s CeW1 , struct BqbOGO {
  int yihPfIl0f7DCZrj if ;
  int IdFCPo ;
  int PkY9EMvAYWREkfEn6_ , Hkp_h6lbWmju2JJ6z = m ;
}TGgx4MLNEdQeN36u5 [ 1750934556 ] ) {
  float aZo ;
  uei = T && FCx_HD5k8XV_3 > I + etNz0XqjEG7p3q / 
    fS7YTZkHziM2N52H4 ( kKBW8F0tNMx , sNz1f0P4yJQ2pWtzJ 
    || l28zRri_BXO1 != gL [ Wru2UMcfaLZNO || ( TvVsBXhKCa6iMf 
    && u32D6zRoyQqigcy3 == REcoFmdznO - - ( gYkqXPA = 
    EjzrCmXR9kgLA || cg2iB <= ( SwzhTC3kh < oDXiJQqksTYexX82Svj 
    ) ) >= GGv5QwU2PkdOIzFIPgX - 849629868 ) ] ) * ! - 
    1617371621.1076770845 . edBKvmzjfb3G0 - u ( ) ;
}
struct nVK3 qlohm_GW5woMF3z9waQ 
;
int ;
int ;
struct {
  struct {
  }tUlE7p_HUZGNpO ;
  int yzhdueeU ;
  int AL2YukFxzDwdI ;
};
int ;
int ;
int Rkz1V , ivPUJGK8swHDjPFUw3F 

;
int tlHjo ( ) {
}
int KYQSq3Z4 ( ) {
}
int ;
int hbe ( ) {
}
int ;
int ;
int ;
int ;
int fOF ( ) {
}
int ;
int C40mrsogJx3T3R00Vc ( ) {
}
int else ;
int UjplOJGu6Z5eGZ ( ) {
  U1s8U6F0 ;
  if ( q6R struct ) {
    dFXTn8zSo ;
    QHyq9bN0KNlFyg ;
    CjID3F6CwXvfoMqg3GR ;
    while ( vuR9fI )     while ( QQ6JhYkMVv1CrXvVC242 
      )     while ( edxl0xwY )     if ( Vy6m7MZMZOfvXc ) 
      {
      vFEXWJs5NoTbmQ1 ;
      if ( UNAnjC4EmiNC )       vW7Pnh_ ;
else       if ( z2Py0Xv3E9i )       EdS ;


      iX3 ;
    }else +     RFDRGaHhrlF5yg ;




  }else   KdXSXkWv3A ;

{
  }  if ( KstcwVep03gUDqalZD )   while ( V7hP9ZGKV1mc7nTA 
    )   return Z_Tv57 ;


}
, 